--- a/configuration.yaml
+++ b/configuration.yaml
@@ -33,7 +33,7 @@ http:
   # Secrets are defined in the file secrets.yaml
   api_password: !secret http_password
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  base_url: scheuermanhomeassistant.duckdns.org
+  base_url: redact.duckdns.org
   ssl_certificate: /ssl/fullchain.pem
   ssl_key: /ssl/privkey.pem
 
